# norlab_trajectory_python_test

./: .gitignore  package.xml  setup.cfg  setup.py
norlab_trajectory_python_test/: .trajectory_ros.py  interpolation.py  odom_data copy.csv  odom_data.csv  plot_ellipse.py  test.py  trajectory_ros.py  trajectory_ros_test.ipynb
norlab_trajectory_python_test/trajectories/: gt_reconstructed_traj.csv  icp_reconstructed_traj.csv
